--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@headlessui/react": "^2.2.5",
     "@heroicons/react": "^2.2.0",
+    "@supabase/supabase-js": "^2.52.1",
     "framer-motion": "^12.23.7",
     "lucide-react": "^0.525.0",
     "next": "15.4.3",
