--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@headlessui/react": "^2.2.5",
     "@heroicons/react": "^2.2.0",
     "@supabase/supabase-js": "^2.52.1",
+    "@vercel/analytics": "^1.5.0",
     "framer-motion": "^12.23.7",
     "lucide-react": "^0.525.0",
     "next": "15.4.3",
